cambios que resuelven el issue #34
